# docs/swagger.json
@@ -25,7 +25,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "get alat angkut master",
+                "description": "check registered number plate",
                 "consumes": [
                     "application/json"
                 ],
@@ -35,7 +35,7 @@
                 "tags": [
                     "barang"
                 ],
-                "summary": "Barang",
+                "summary": "check registered transportration item",
                 "parameters": [
                     {
                         "type": "string",
@@ -109,7 +109,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "get alat angkut master",
+                "description": "get master transportration",
                 "consumes": [
                     "application/json"
                 ],
@@ -119,7 +119,7 @@
                 "tags": [
                     "barang"
                 ],
-                "summary": "Barang",
+                "summary": "master data",
                 "parameters": [
                     {
                         "type": "integer",
@@ -146,7 +146,82 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/barang.Model"
+                                "$ref": "#/definitions/barang.ResponseGetGetAlatAngkut"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/util.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/util.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/util.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
+        "/barang/data/registered/get-transportation": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "get registered data tranportation",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "barang"
+                ],
+                "summary": "registered items",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "take",
+                        "name": "take",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "page",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "search",
+                        "name": "search",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "opd_id",
+                        "name": "opd_id",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/barang.ResponseGetRegisteredDataTransportation"
                             }
                         }
                     },
@@ -352,7 +427,25 @@
                 "kode_barang": {
                     "type": "string"
                 },
+                "kuasa_pengguna_barang": {
+                    "$ref": "#/definitions/barang.Organisasi"
+                },
+                "kuasa_pengguna_barang_id": {
+                    "type": "integer"
+                },
+                "pengguna_barang": {
+                    "$ref": "#/definitions/barang.Organisasi"
+                },
+                "pengguna_barang_id": {
+                    "type": "integer"
+                },
                 "pidbarang": {
+                    "type": "integer"
+                },
+                "sub_kuasa_pengguna_barang": {
+                    "$ref": "#/definitions/barang.Organisasi"
+                },
+                "sub_kuasa_pengguna_barang_id": {
                     "type": "integer"
                 },
                 "tahun_perolehan": {
@@ -429,6 +522,57 @@
                     "type": "string"
                 },
                 "umur_ekonomis": {
+                    "type": "integer"
+                }
+            }
+        },
+        "barang.Organisasi": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "kode": {
+                    "type": "string"
+                },
+                "level": {
+                    "type": "integer"
+                },
+                "nama": {
+                    "type": "string"
+                }
+            }
+        },
+        "barang.ResponseGetGetAlatAngkut": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/barang.Model"
+                },
+                "data_total": {
+                    "type": "integer"
+                },
+                "page": {
+                    "type": "integer"
+                },
+                "total_page": {
+                    "type": "integer"
+                }
+            }
+        },
+        "barang.ResponseGetRegisteredDataTransportation": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/barang.MesinModel"
+                },
+                "data_total": {
+                    "type": "integer"
+                },
+                "page": {
+                    "type": "integer"
+                },
+                "total_page": {
                     "type": "integer"
                 }
             }
